--- a/.github/workflows/electron-rebuild.yml
+++ b/.github/workflows/electron-rebuild.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       matrix:
         # using older ubuntu to mitigate "/lib/x86_64-linux-gnu/libc.so.6: version `GLIBC_2.29' not found" error
-        os: [macos-latest, windows-2019, ubuntu-18.04]
+        os: [macos-latest, windows-latest, ubuntu-18.04]
 
     steps:
       - uses: actions/checkout@v3
@@ -31,6 +31,10 @@ jobs:
 
       - name: rebuild
         run: npx electron-rebuild -v "${{ github.event.inputs.electron_version }}"
+        
+      - if: matrix.os == 'windows-latest'
+        name: rebuild ia32
+        run: npx electron-rebuild -v "${{ github.event.inputs.electron_version }}" -a ia32
         
       - name: list folder
         run: ls -R node_modules/sqlite3/bin
