--- a/.github/workflows/electron-rebuild.yml
+++ b/.github/workflows/electron-rebuild.yml
@@ -32,7 +32,7 @@ jobs:
       - name: rebuild
         run: npx electron-rebuild -v "${{ github.event.inputs.electron_version }}"
         
-      - if: matrix.os == 'windows-latest'
+      - if: matrix.os != 'macos-latest'
         name: rebuild ia32
         run: npx electron-rebuild -v "${{ github.event.inputs.electron_version }}" -a ia32
         
